# MCP-manager

./: .gitignore  README.md  main.py  mcp-manager.example.yaml  pyproject.toml  test-config.yaml  test-multi.yaml  test-universal.yaml
mcp_manager/: __init__.py
mcp_manager/access/: __init__.py  client_identifier.py  middleware.py  permission_engine.py
mcp_manager/cli/: __init__.py  main.py
mcp_manager/config/: __init__.py  adaptation.py  manager.py  models.py
mcp_manager/core/: __init__.py  config_watcher.py  manager.py
mcp_manager/installers/: __init__.py  base.py  github.py  local.py  npm.py  universal.py
mcp_manager/routing/: __init__.py  aggregator.py  cache.py  router.py
mcp_manager/server/: __init__.py  detection.py  manager.py  process.py
